Fix dateline wrapping when the LIVE badge is on

--- a/common/app/assets/stylesheets/module/_article.scss
+++ b/common/app/assets/stylesheets/module/_article.scss
@@ -81,7 +81,7 @@
 
     time {
         display: inline-block;
-        width: 85%;
+        width: 80%;
     }
 
     i {
